<resources>
    <string name="app_name">PART2 Shopping List</string>
    <string name="add_product">Add Product</string>
    <string name="hint_product">Product Name...</string>
    <string name="hint_product_quantity">Quantity...</string>
    <string name="hint_list">Shopping List Name...</string>
    <string name="button_save">Save</string>
    <string name="button_create_list">Create</string>
    <string name="product_empty_not_saved">Product name cannot be empty.</string>
    <string name="list_empty_not_saved">Shopping List name cannot be empty.</string>
    <string name="upload_image">Upload</string>
    <string name="shopping_list_image">Optional Shopping List Image</string>
    <string-array name="labels_unit">
        <item>Unit</item>
        <item>Kg</item>
        <item>Liter</item>
    </string-array>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_shopping_list">Create Shopping List</string>
    <string name="title_activity_delete_list">Delete Shopping List</string>
    <string name="delete_list">Do you wish to delete Shopping List?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="delete_list_title">Delete Shopping List</string>
    <string name="delete_list_image">Delete Shopping List Image</string>
    <string name="delete_edit_product_title">Delete/Edit Product</string>
    <string name="delete_product_button">Delete</string>
    <string name="edit_product_button">Edit</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
</resources>