...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProductActivity">


    <Button
        android:id="@+id/incrementButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/increment"
...
        android:layout_marginEnd="16dp"
        android:entries="@array/labels_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductName" />

    <Button
        android:id="@+id/saveProductChangesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel"
...
